samples/_failures_safe/1761243084_94c7be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_250606c3.c: In function ‘main’:
./samples/SAFE/__tmp_250606c3.c:168:20: error: missing terminating " character
  168 |             printf("Invalid edge
      |                    ^~~~~~~~~~~~~
./samples/SAFE/__tmp_250606c3.c:168:13: error: expected expression at end of input
  168 |             printf("Invalid edge
      |             ^~~~~~
./samples/SAFE/__tmp_250606c3.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_250606c3.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_250606c3.c:168:13: error: expected declaration or statement at end of input
